--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/lasagna.html">Recipe Title 1</a></li>
+        <li><a href="recipes/shrimpmarinara.html">Recipe Title 2</a></li>
+        <li><a href="recipes/easytunapastabake.html">Recipe Title 3</a></li>
+    </ul>   
 </body>
-</html>S
+</html>
